"fixed logo on mobile'

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -25,12 +25,8 @@ img {
 
 .website-logo {
   box-sizing: content-box;
-  display: block;
-  font-weight: 100;
   max-width: 120px;
   max-height: 20px;
-  color: $white;
-  font-size: 25px;
 
   &--top {
     margin: auto;
